Removed all last JUnit 4 remainders